[generator] simplified diagram generator API
- added IdCache
- summarized generator state args in a context object
- added ServerStatus.Fatal on synatx and linking errors (no more sync)
- by default generate diagram even with plain validation errors
- added SIssueMarker
- added default types to SModelElements
- deprecated SModelUtil and removed Traceable

Signed-off-by: Jan Koehnlein <jan.koehnlein@typefox.io>

--- a/org.eclipse.sprotty/build.gradle
+++ b/org.eclipse.sprotty/build.gradle
@@ -20,4 +20,5 @@ description = "Server API for providing sprotty diagrams"
 dependencies {
 	compile "javax.inject:javax.inject:1"
     compile "org.eclipse.xtend:org.eclipse.xtend.lib:${versions.xtext}"
+    compile "log4j:log4j:${versions.log4j}"
 }
