--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ apply from: "${rootDir}/gradle/versions.gradle"
 
 configure(subprojects.findAll {it.file('src').exists()}) {
 	repositories {
+		maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }	
 		maven {
 			name 'maven-repo'
 			url 'https://repo.maven.apache.org/maven2/'
