--- a/gradle/versions.gradle
+++ b/gradle/versions.gradle
@@ -14,21 +14,14 @@
  * SPDX-License-Identifier: EPL-2.0 OR GPL-2.0 WITH Classpath-exception-2.0
  ********************************************************************************/
 
-version = '0.5.0-SNAPSHOT'
+version = '0.6.0-SNAPSHOT'
 
 ext.versions = [
     xtext: '2.18.0-SNAPSHOT',
-    xtext_example: '2.13.0',
-    elk: '[0.3.0,1)',
-    guice: '3.0',
-    gson: '2.8.0',
+    elk: '[0.4.0,0.6)',
+    guice: '4.2.2',
+    gson: '2.8.2',
     websocket: '1.0',
-    slf4j: '1.7.24',
     log4j: '1.2.16',
-    junit: '4.12',
-    jetty: '9.4.2.v20170220',
-    requirejs: '2.3.2',
-    jquery: '2.2.4',
-    ace: '1.2.3',
-    bootstrap: '3.3.7'
+    junit: '4.12'
 ]
