--- a/gradle/versions.gradle
+++ b/gradle/versions.gradle
@@ -14,10 +14,10 @@
  * SPDX-License-Identifier: EPL-2.0 OR GPL-2.0 WITH Classpath-exception-2.0
  ********************************************************************************/
 
-version = '0.6.0-SNAPSHOT'
+version = '0.6.0'
 
 ext.versions = [
-    xtext: '2.18.0-SNAPSHOT',
+    xtext: '2.17.0',
     elk: '[0.4.0,0.6)',
     guice: '4.2.2',
     gson: '2.8.2',
