[build] Set the version of lsp4j
Signed-off-by: erogleva <e.rogleva@mail.bg>

--- a/gradle/versions.gradle
+++ b/gradle/versions.gradle
@@ -23,5 +23,6 @@ ext.versions = [
     gson: '2.8.2',
     websocket: '1.0',
     log4j: '1.2.16',
-    junit: '4.12'
+    junit: '4.12',
+    lsp4j: '0.7.2'
 ]
