--- a/gradle/versions.gradle
+++ b/gradle/versions.gradle
@@ -23,6 +23,8 @@ ext.versions = [
     gson: '2.8.2',
     websocket: '1.0',
     log4j: '1.2.16',
+    slf4j: '1.7.28',
     junit: '4.12',
-    lsp4j: '0.7.2'
+    lsp4j: '0.7.2',
+    jetty: '9.4.20.v20190813'
 ]
