[layout] introduced 'interactive' layout
- added ServerLayoutKind.INTERACTIVE and handle it in DefaultDiagramServer
- allow to forward causing action to the layout, e.g. to fully layout when the user wants taht
Fixes #35

[generator] Fixed IdCache and example

--- a/examples/package.json
+++ b/examples/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "reflect-metadata": "^0.1.13",
-    "sprotty": "file:/Users/spoenemann/github/sprotty/sprotty"
+    "sprotty": "next"
   },
   "devDependencies": {
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
