--- a/org.eclipse.sprotty/.settings/org.eclipse.xtend.core.Xtend.prefs
+++ b/org.eclipse.sprotty/.settings/org.eclipse.xtend.core.Xtend.prefs
@@ -2,6 +2,7 @@
 //outlet.DEFAULT_OUTPUT.sourceFolder.src/main/java.ignore=
 //outlet.DEFAULT_OUTPUT.sourceFolder.src/main/xtend-gen.directory=
 //outlet.DEFAULT_OUTPUT.sourceFolder.src/main/xtend-gen.ignore=
+//outlet.DEFAULT_OUTPUT.sourceFolder.src/test/java.directory=build/xtend/test
 BuilderConfiguration.is_project_specific=true
 autobuilding=true
 eclipse.preferences.version=1
