--- a/gradle/versions.gradle
+++ b/gradle/versions.gradle
@@ -14,7 +14,7 @@
  * SPDX-License-Identifier: EPL-2.0 OR GPL-2.0 WITH Classpath-exception-2.0
  ********************************************************************************/
 
-version = '0.7.0-SNAPSHOT'
+version = '0.7.0'
 
 ext.versions = [
     xtext: '2.18.0',
@@ -25,6 +25,6 @@ ext.versions = [
     log4j: '1.2.16',
     slf4j: '1.7.28',
     junit: '4.12',
-    lsp4j: '0.7.2',
+    lsp4j: '0.8.0',
     jetty: '9.4.20.v20190813'
 ]
