--- a/gradle/versions.gradle
+++ b/gradle/versions.gradle
@@ -19,6 +19,7 @@ version = '0.8.0-SNAPSHOT'
 ext.versions = [
     xtext: '2.18.0',
     elk: '[0.4.0,0.6)',
+    guava: '[14.0,28)',
     guice: '4.2.2',
     gson: '2.8.2',
     websocket: '1.0',
