--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ bin/
 xtend-gen/
 .project
 .classpath
+org.eclipse.jdt.core.prefs
 org.eclipse.buildship.core.prefs
 org.eclipse.wst.common.component
 org.eclipse.wst.common.project.facet.core.xml
