--- a/gradle/versions.gradle
+++ b/gradle/versions.gradle
@@ -17,15 +17,15 @@
 version = '0.8.0-SNAPSHOT'
 
 ext.versions = [
-    xtext: '2.18.0',
-    elk: '[0.4.0,0.6)',
+    xtext: '2.21.0',
+    elk: '0.6.1',
     guava: '[14.0,28)',
     guice: '4.2.2',
     gson: '2.8.2',
     websocket: '1.0',
-    log4j: '1.2.16',
+    log4j: '1.2.17',
     slf4j: '1.7.28',
     junit: '4.12',
-    lsp4j: '0.8.1',
+    lsp4j: '0.9.0',
     jetty: '9.4.20.v20190813'
 ]
