--- a/gradle/versions.gradle
+++ b/gradle/versions.gradle
@@ -14,11 +14,11 @@
  * SPDX-License-Identifier: EPL-2.0 OR GPL-2.0 WITH Classpath-exception-2.0
  ********************************************************************************/
 
-version = '0.9.0-SNAPSHOT'
+version = '0.9.0'
 
 ext.versions = [
-    xtext: '2.21.0',
-    elk: '0.6.1',
+    xtext: '2.22.0',
+    elk: '0.7.0',
     guava: '[14.0,28)',
     guice: '4.2.2',
     gson: '2.8.2',
