Use version 0.11.0. Dependencies update
Update to Xtext 2.26, lsp4j 0.12.0, guice 5.0.1, gson 2.8.6.

Signed-off-by: Dennis Huebner <dennis.huebner@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -18,9 +18,9 @@ import java.time.format.DateTimeFormatter
 import java.time.LocalDateTime
 
 buildscript {
-	repositories.jcenter()
+	repositories.mavenCentral()
 	dependencies {
-		classpath 'org.xtext:xtext-gradle-plugin:1.0.19'
+		classpath 'org.xtext:xtext-gradle-plugin:2.0.8'
 	}
 }
 
