--- a/gradle/versions.gradle
+++ b/gradle/versions.gradle
@@ -17,15 +17,15 @@
 version = '0.11.0-SNAPSHOT'
 
 ext.versions = [
-    xtext: '2.26.0',
-    elk: '0.7.0',
-    guava: '[14.0,28)',
-    guice: '5.0.1',
-    gson: '2.8.6',
+    xtext: '2.26.0', // xtext: '2.32.0',
+    elk: '0.8.1',
+    guava: '32.1.2',
+    guice: '7.0.0',
+    gson: '2.10.1',
     websocket: '1.0',
     log4j: '1.2.17',
-    slf4j: '1.7.28',
+    slf4j: '1.7.36',
     junit: '4.12',
-    lsp4j: '0.12.0',
+    lsp4j: '0.12.0', // lsp4j: '0.21.1',
     jetty: '9.4.20.v20190813'
 ]
