--- a/org.eclipse.sprotty/build.gradle
+++ b/org.eclipse.sprotty/build.gradle
@@ -18,7 +18,7 @@ ext.title = "Sprotty Diagram API"
 description = "Server API for providing sprotty diagrams"
 
 dependencies {
-	compile "javax.inject:javax.inject:1"
+	compile "jakarta.inject:jakarta.inject-api:2.0.1"
     compile "org.eclipse.xtend:org.eclipse.xtend.lib:${versions.xtext}"
     compile "log4j:log4j:${versions.log4j}"
     testCompile "junit:junit:${versions.junit}"
