--- a/org.eclipse.sprotty.layout/build.gradle
+++ b/org.eclipse.sprotty.layout/build.gradle
@@ -18,8 +18,8 @@ ext.title = "Sprotty Layout Engine"
 description = "Bridge to automatic layout libraries such as ELK"
 
 dependencies {
-    compile project(':org.eclipse.sprotty')
-    compile "org.eclipse.elk:org.eclipse.elk.core:${versions.elk}"
-    testCompile "org.eclipse.elk:org.eclipse.elk.graph.text:${versions.elk}"
-    testCompile "junit:junit:${versions.junit}"
+    api project(':org.eclipse.sprotty')
+    api "org.eclipse.elk:org.eclipse.elk.core:${versions.elk}"
+    testImplementation "org.eclipse.elk:org.eclipse.elk.graph.text:${versions.elk}"
+    testImplementation "junit:junit:${versions.junit}"
 }
