--- a/org.eclipse.sprotty.server/build.gradle
+++ b/org.eclipse.sprotty.server/build.gradle
@@ -18,8 +18,8 @@ ext.title = "Sprotty Diagram Server"
 description = "JSON and Websocket implementations for connecting a diagram server to a sprotty client"
 
 dependencies {
-    compile project(':org.eclipse.sprotty')
-    compile "com.google.code.gson:gson:${versions.gson}"
-    compile "javax.websocket:javax.websocket-api:${versions.websocket}"
-    testCompile "junit:junit:${versions.junit}"
+    api project(':org.eclipse.sprotty')
+    api "com.google.code.gson:gson:${versions.gson}"
+    api "jakarta.platform:jakarta.jakartaee-api:${versions.jakartaee_api}"
+    testImplementation "junit:junit:${versions.junit}"
 }
