--- a/examples/package.json
+++ b/examples/package.json
@@ -3,22 +3,22 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^5.3.0",
     "reflect-metadata": "^0.1.13",
-    "sprotty": "next"
+    "sprotty": "~1.1.0"
   },
   "devDependencies": {
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "css-loader": "^3.2.0",
     "source-map-loader": "^0.2.4",
     "style-loader": "^1.0.0",
-    "ts-loader": "^6.0.4",
-    "typescript": "^3.6.2",
-    "webpack": "^4.39.3",
-    "webpack-cli": "^3.3.7"
+    "ts-loader": "~9.5.0",
+    "typescript": "~5.3.0",
+    "webpack": "~5.90.0",
+    "webpack-cli": "~5.1.0"
   },
   "scripts": {
-    "prepare": "yarn build",
+    "prepare": "npm run build",
     "build": "webpack",
     "watch": "webpack --watch"
   }
