--- a/gradle/versions.gradle
+++ b/gradle/versions.gradle
@@ -14,18 +14,19 @@
  * SPDX-License-Identifier: EPL-2.0 OR GPL-2.0 WITH Classpath-exception-2.0
  ********************************************************************************/
 
-version = '1.1.0-SNAPSHOT'
+version = '1.2.0-SNAPSHOT'
 
 ext.versions = [
-    xtext: '2.33.+',
-    elk: '0.9.+',
+    xtext: '[2.33,2.34)',
+    elk: '[0.9,0.10)',
     guava: '[32.0.0, 33)',
-    guice: '7.0.+',
-    gson: '2.10.+',
-    jakartaee_api: '10.0.+',
-    log4j: '1.2.+',
-    slf4j: '1.7.+',
-    junit: '4.13.+',
-    lsp4j: '0.22.+',
-    jetty: '11.0.+'
+    guice: '[7.0,7.1)',
+    gson: '[2.10,2.11)',
+    jakartaee_api: '[10.0,10.1)',
+    log4j: '[1.2,1.3)',
+    slf4j: '[1.7,1.8)',
+    junit: '[4.13,4.14)',
+    lsp4j: '[0.22,0.23)',
+    jetty: '[11.0,11.1)',
+    jakarta_inject: '[2.0,2.1)'
 ]
