--- a/org.eclipse.sprotty/build.gradle
+++ b/org.eclipse.sprotty/build.gradle
@@ -18,7 +18,7 @@ ext.title = "Sprotty Diagram API"
 description = "Server API for providing sprotty diagrams"
 
 dependencies {
-	api "jakarta.inject:jakarta.inject-api:2.0.+"
+	api "jakarta.inject:jakarta.inject-api:${versions.jakarta_inject}"
     api "org.eclipse.xtend:org.eclipse.xtend.lib:${versions.xtext}"
     api "log4j:log4j:${versions.log4j}"
     testImplementation "junit:junit:${versions.junit}"
