--- a/gradle/versions.gradle
+++ b/gradle/versions.gradle
@@ -14,7 +14,7 @@
  * SPDX-License-Identifier: EPL-2.0 OR GPL-2.0 WITH Classpath-exception-2.0
  ********************************************************************************/
 
-version = '1.3.0-SNAPSHOT'
+version = '1.2.0'
 
 ext.versions = [
     xtext: '[2.33,2.37)',
