--- a/gradle/publishing.gradle
+++ b/gradle/publishing.gradle
@@ -71,11 +71,11 @@ publishing {
 			def releasesRepoUrl = 'https://oss.sonatype.org/service/local/staging/deploy/maven2/'
 			def snapshotsRepoUrl = 'https://oss.sonatype.org/content/repositories/snapshots/'
 			credentials {
-				username = System.getenv('SONATYPE_USERNAME') ?: ''
-				password = System.getenv('SONATYPE_PASSWORD') ?: ''
+				username = System.getenv('SONATYPE_USERNAME') ?: project.findProperty("ossrhUsername")
+				password = System.getenv('SONATYPE_PASSWORD') ?: project.findProperty("ossrhPassword")
 			}
 			url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
-			// use this URL for local testing/debugging purposes			
+			// use this URL for local testing/debugging purposes
 			// url = "file:" + file("${rootDir}/build/maven-repository")
 		}
 	}
